--- a/bytenews/templates/bytenews/base.html
+++ b/bytenews/templates/bytenews/base.html
@@ -12,6 +12,7 @@
 
     <!-- Favicons -->
     <!-- These Icons are not working. Need to be fixed -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -21,8 +22,10 @@
 
     <!-- Custom styles -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'bytenews/custom.css' %}">
     <link rel="stylesheet" href="{% static 'bytenews/bootstrap.min.css' %}">
+    
+    <script src="{% static 'bytenews/color-modes.js' %}"></script>
 
     <!-- JavaScript files -->
     <script src="{% static 'bytenews/js/color-modes.js' %}"></script>
@@ -95,13 +98,14 @@
     <header class="blog-header lh-1 py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="link-secondary" href="#">Subscribe</a>
+                <a class="btn btn-sm btn-outline-secondary ms-3" href="#">Subscribe</a>
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-body-emphasis text-decoration-none" href="{% url 'bytenews:home' %}">
                     ByteTrain
                 </a>
             </div>
+            
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="link-secondary" href="#" aria-label="Search">
                     <svg class="bi" width="24" height="24">
@@ -126,6 +130,7 @@
             </div>
         </div>
     </header>
+    <hr>
     <!-- Navigation Menu -->
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
@@ -139,7 +144,10 @@
             <a class="p-2 link-secondary" href="#">Health</a>
         </nav>
     </div>
+    <hr>
 </div>
+
+
   <!-- Main content area -->
   <main class="container">
       {% block content %}
