--- a/bytenews/templates/bytenews/home.html
+++ b/bytenews/templates/bytenews/home.html
@@ -53,7 +53,8 @@
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">From the Firehose</h3>
       <div id="content">
-        <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
+        <h2 class="display-5 link-body-emphasis mb-1">New Posts</h2>
+        <hr>
         <ul>
           {% for post in posts %}
             <li>
@@ -66,7 +67,7 @@
 
       <!-- Article 1 -->
       <article class="blog-post">
-        <h2 class="display-5 link-body-emphasis mb-1">Another blog post</h2>
+        <h2 class="display-5 link-body-emphasis mb-1">More Posts</h2>
         <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
 
         <!-- Article content -->
