--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,17 +4,27 @@
 
 {% block content %}
 
+
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card mb-3">
                 <div class="card-body">
+                    <!-- Profile picture container -->
+                    <div class="text-center">
+                        <!-- Added a div to wrap the profile picture -->
+                        <div class="profile-picture-container">
+                            <img src="{% if user.profile.image %}{{ user.profile.image.url }}{% else %}{% static 'media/default_user_image.jpg' %}{% endif %}" alt="Profile Picture" id="profile-img" class="img-fluid rounded-circle">
+                        </div>
+                    </div>
+                    <hr>
                     <div class="row">
                         <div class="col-sm-3">
                             <h6 class="mb-0">Username</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            {{ user.username }}
+                            {{ user.username| title }}
                         </div>
                     </div>
                     <hr>
@@ -29,16 +39,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm-3">
-                            <h6 class="mb-0">Profile Picture</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            <img src="{% if user.profile.image %}{{ user.profile.image.url }}{% else %}{% static 'bytenews/default_profile_image.jpg' %}{% endif %}" alt="Profile Picture" class="img-fluid">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Social Media</h6>
+                            <h6 class="mb-0">Social Media Links:</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             <ul class="list-inline">
@@ -59,6 +60,11 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                    <!-- Added an edit button -->
+                    <!--The view and function needs to be edited-->
+                    <div class="text-center">
+                        <a href="" class="btn btn-secondary">Edit Profile</a>
                     </div>
                 </div>
             </div>
